# tensorflow_cc

./: BAZEL_VERSION  LICENSE  README.Luigi.md  README.md  TENSORFLOW_VERSION  build.sh  test_tensorflow_if_gpu_after_install.py  ubuntu-requirements.sh
example/: CMakeLists.txt  README.md  example_label_image.cpp
tensorflow_cc/: CMakeLists.txt  README.md  bash_utils.sh  replace_string.py
tensorflow_cc/cmake/: TensorflowBase.cmake  build_tensorflow.sh.in
